// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expr literal bit string 1`] = `
{
  "prefix": null,
  "text": "b'011001'",
  "type": "string",
}
`;

exports[`expr literal bit string 2`] = `
{
  "prefix": "_binary",
  "text": "b'011001'",
  "type": "string",
}
`;

exports[`expr literal boolean 1`] = `
{
  "text": "true",
  "type": "bool",
}
`;

exports[`expr literal boolean 2`] = `
{
  "text": "TRUE",
  "type": "bool",
}
`;

exports[`expr literal boolean 3`] = `
{
  "text": "false",
  "type": "bool",
}
`;

exports[`expr literal boolean 4`] = `
{
  "text": "FALSE",
  "type": "bool",
}
`;

exports[`expr literal datetime 1`] = `
{
  "text": "'20:15:00'",
  "type": "time",
}
`;

exports[`expr literal datetime 2`] = `
{
  "text": ""1995-06-01"",
  "type": "date",
}
`;

exports[`expr literal datetime 3`] = `
{
  "text": "'1995-06-01 20:15:00'",
  "type": "datetime",
}
`;

exports[`expr literal datetime 4`] = `
{
  "text": ""1995-06-01 20:15:00"",
  "type": "timestamp",
}
`;

exports[`expr literal double-quoted string 1`] = `
{
  "text": ""hello"",
  "type": "string",
}
`;

exports[`expr literal double-quoted string 2`] = `
{
  "text": ""hel\\"lo"",
  "type": "string",
}
`;

exports[`expr literal double-quoted string 3`] = `
{
  "text": ""hel"",
  "type": "string",
}
`;

exports[`expr literal hex literal 1`] = `
{
  "prefix": null,
  "text": "0xAAFF11",
  "type": "string",
}
`;

exports[`expr literal hex literal 2`] = `
{
  "prefix": "_binary",
  "text": "0xAAFF11",
  "type": "string",
}
`;

exports[`expr literal hex string 1`] = `
{
  "prefix": null,
  "text": "x'AFC123'",
  "type": "string",
}
`;

exports[`expr literal hex string 2`] = `
{
  "prefix": "_binary",
  "text": "x'AFC123'",
  "type": "string",
}
`;

exports[`expr literal null 1`] = `
{
  "text": "null",
  "type": "null",
}
`;

exports[`expr literal null 2`] = `
{
  "text": "NULL",
  "type": "null",
}
`;

exports[`expr literal number 1`] = `
{
  "text": "0",
  "type": "number",
}
`;

exports[`expr literal number 2`] = `
{
  "text": "123",
  "type": "number",
}
`;

exports[`expr literal number 3`] = `
{
  "text": "0.15",
  "type": "number",
}
`;

exports[`expr literal number 4`] = `
{
  "text": "123e15",
  "type": "number",
}
`;

exports[`expr literal number 5`] = `
{
  "text": "1.23E+13",
  "type": "number",
}
`;

exports[`expr literal number 6`] = `
{
  "text": "0.107e-62",
  "type": "number",
}
`;

exports[`expr literal single-quoted string 1`] = `
{
  "text": "'hello'",
  "type": "string",
}
`;

exports[`expr literal single-quoted string 2`] = `
{
  "text": "'hel\\'lo'",
  "type": "string",
}
`;

exports[`expr literal single-quoted string 3`] = `
{
  "text": "'hel''lo'",
  "type": "string",
}
`;
